1999-03-04  Ian Peters  <itp@acm.org>

	* keyboard.c: keyboard_cb: Commented out suspicious line checking
	keyboard modifiers, as this breaks some X setups with Numlock as
	modifier.  What was this for anyway?  Gtk+ can grab events fine
	regardless of what you do.

1999-02-21  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* properties.c, game.c: Marked more translatable strings with _().

1999-02-13  Ian Peters  <ipeters@acm.org>

	* Nothing was connected to delete_event, segfault on wm close.  Removed
	static from exit_cb and really_exit_cb in menu.c, and connected them up
	in gnobots.c, and now it works.

1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnobots.c (argv): Visual/Colormap fix.

	* menu.c: Kill file menu.
